# Photo-Cutter

./: README.md  photo-cutter.py  pyproject.toml
