[project]
name = "photo-cutter"
version = "0.1.0"
description = "Upload and crop images to custom aspect ratios with Streamlit"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Gabriel Favero" }
]
dependencies = [
    "streamlit>=1.20.0",
    "pillow>=9.0.0",
    "pillow-heif>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 100
target-version = ['py38']

[project.scripts]
photo-cutter = "photo_cutter:main"
